		- Fixed a bug where the fourth stat on an item would not be visible if the item had a long name.
		- Fixed a bug where quests of ''NPCType'' would not be completeable after a save.
		- Fixed a bug where Epochal items would grant alot less dust than other items.
		- Lowered the amount of dust granted by disenchanted items.

_________________________________________________________________________________________________________
Version 0.1.4.7 (20/02-2014):

	- General:
		- The game was named! It is now called:

					The Legend of Eiwar!

		- A new game mode was added! You can now play with multiple of your characters against the computer!
		- The UI has not be rewamped completely, but certain elements have been significantly improved!
		- You can now see how much Dust an item would give if disenchanted and how much dust you have now.
		- The bug with text being out of place has been fixed.
		- Fixed a bug where the game would crash when the player lost a battle to a "Fireball" or a
		  "Atonement Smite" opponent.
		- Fixed a bug where "Desperation" and "Growing Despair" opponents would deal damage to dead players.
		- Fixed a crash that would occur when trying to exit the game while on the "NPC Type" quest.
		- Increased the amount of dust received from disenchanting items.
			- The amount is the same, however extra dust is given depending the sum of all the items stats.
		- Created a ''Bug/Suggestion Report'' button in the ''Support'' pane.

	- Monsters:
		- Monster AI's were modified to take into account how many players it is battling against.
		- "Desperation" was changed: "This ability deals 15% of the monsters health deficit in damage 
		  to a (was all) character!". Monsters with "Desperation" were unkillable by parties.
		- The amount healed by the "Atonement Smite" ability was changed: "This ability deals the units level
		  in damage and heals it for 2% (was 5%) of its maximum health."

	- Classes:
		- All: